# monero-vanity

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  build_all.sh  build_sign.sh
.github/workflows/: ci.yml
src/: README.md  address.rs  cli.rs  constants.rs  encode.rs  gui.rs  main.rs  pattern.rs  regexes.rs  speed.rs  state.rs  threads.rs
utils/: create_appimage.sh
utils/monero-vanity.AppDir/: AppRun  monero-vanity.desktop
utils/monero-vanity.AppDir/usr/share/metainfo/: monero-vanity.appdata.xml
utils/pgp/: README.md
