[package]
name = "monero-vanity"
version = "0.2.0"
edition = "2021"

# Build with [RUSTFLAGS="-C target-cpu=native" cargo build --profile optimized]
# if you don't care about compatibility and want to optimize for your particular CPU
# for a 15%~ speed increase. Or just [cargo build --profile] for regular optimizations.
[profile.optimized]
inherits = "release"
lto = true
codegen-units = 1

[dependencies]
rand = "0.7.3"
regex = "1.6.0"
monero = "0.18.0"
num_cpus = "1.13.1"
num-format = "0.4.0"
base58-monero = "1.0.0"
curve25519-dalek = "3.2.1"
