[package]
name = "monero-vanity"
version = "0.4.1"
edition = "2021"
authors = ["hinto.janai <hinto.janai@protonmail.com>"]
description = "Monero Vanity Address Generator"
repository = "https://github.com/hinto-janai/monero-vanity"
readme = "README.md"
keywords = ["monero", "vanity", "address", "cli", "gui"]
categories = ["command-line-utilities"]
license = "MIT"
exclude = [
    "utils/*",
    "CHANGELOG.md",
    ".github",
]

# Build with [RUSTFLAGS="-C target-cpu=native" cargo build --profile optimized]
# if you don't care about compatibility and want to optimize for your particular CPU
# for a 15%~ speed increase. Or just [cargo build --profile] for regular optimizations.
[profile.release]
debug = false
strip = "symbols"
codegen-units = 1
lto = true

[dependencies]
# GUI
egui   = { version = "0.21.0" }

# CLI
clap = { version = "4.2.1", features = ["derive"] }

# RNG/Crypto
rand = "0.7.3"
curve25519-dalek = { path = "external/curve25519-dalek" }
#curve25519-dalek = "3.2.1"

# Monero
monero = { path = "external/monero-rs" }
#monero = "0.18.2"
base58-monero = "1.0.0"

# Misc
image = "0.24.6"
regex = "1.7.3"
lazy_static = "1.4.0"
readable = { version = "0.6.0", features = ["ignore_nan_inf"] }

# Windows egui.
[target.'cfg(windows)'.dependencies]
eframe = { version = "0.21.3", default-features = false, features = ["wgpu"] }

# Unix egui.
[target.'cfg(unix)'.dependencies]
eframe = { version = "0.21.3", default-features = false, features = ["glow"] }

# For Windows build (icon)
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
static_vcruntime = "2.0"

# For macOS build (cargo-bundle)
[package.metadata.bundle]
name = "monero-vanity"
identifier = "com.github.hinto-janai.monero-vanity"
icon = ["src/icon.png"]
category = "public.app-category.utilities"
